--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "eslint": "^9.24.0",
-    "express": "^4.18.2",
-    "marwanproject": "file:..",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "nodemon": "^3.1.9"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/express": "^4.17.21"
   }
