--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "marwanproject",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
@@ -12,6 +13,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0"
+  },
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
