--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,9 @@
     },
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
-  "routes": [{ "src": "/api/(.*)", "dest": "/api/index.js" }]
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
