--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "nodemon": "^3.1.9"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21"
   }
