--- a/api/package.json
+++ b/api/package.json
@@ -5,5 +5,10 @@
   "type": "module",
   "main": "index.js",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0"
+  }
 }
