--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.13.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "nodemon": "^3.1.9"
   }
 }
