--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "npm install && npm install --prefix api && npm run build",
   "builds": [
     {
       "src": "frontend/package.json",
